# flow_matching_speech

examples/text/: pyproject.toml  run_train.py  train.py  train_dfmlm.sh
examples/text/configs/: config.yaml  dummy_libri.yaml  librispeech.yaml  librispeech_ax.yaml
examples/text/data/: .null-ls_264639_data.py  data.py  tokenizer.py
examples/text/logic/: .null-ls_814785_training.py  evaluate.py  flow.py  generate.py  state.py  training.py
examples/text/scripts/: eval.py  libri_metadata.sh  run_eval.py
examples/text/utils/: logging.py
examples/text/xps/: continue_multirun.sh  continue_run.sh  debug_libri.sh  debug_mimas.sh  eval.sh  h100_debug.sh  kenlm.sh  lr_sweep.sh  multirun.sh  quasi_random_search.sh  rando_masked_loss.sh  rando_pure.sh  rando_search.sh  soup_bowl.sh
