[project]
name = "text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==3.6.0",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "kenlm>=0.3.0",
    "librosa>=0.11.0",
    "numpy==1.26.4",
    "pandas==2.0.0",
    "pyarrow==19.0.0",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "torch==2.5.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]
